[package]
name = "chief"
version = "0.1.0"
edition = "2021"
description = "A write plugin for the Stryfry nostr relay"
authors = ["0xtr <oxtrr@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/0xtrr/chief"
repository = "https://github.com/0xtrr/chief"
license = "MIT"
keywords = ["nostr", "strfry", "filter", "plugin"]

[dependencies]
nostr-sdk = "0.34.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = { version = "0.7.11", features = ["with-serde_json-1"] }
toml = "0.8.19"
